# reentrant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  false-positive.yml  publish.yml  reentrant.yml
.reentrant/: feedback.jsonl
reentrant/: cli.py
reentrant/analysis/: access_walker.py  blocking_calls.py  checker.py  guards.py  isr_roots.py
reentrant/data/: isr_unsafe_apis.toml
reentrant/diffscope/: __init__.py  gitdiff.py  scope.py
reentrant/explain/: __init__.py  llm.py  prompts.py  retriever.py
reentrant/feedback/: __init__.py  store.py
reentrant/model/: api_table.py  callgraph.py  findings.py  rules.py  symbols.py
reentrant/parse/: loader.py  queries.py
reentrant/report/: sarif.py
tests/: measure_fp.py  test_corpus.py  test_diffscope.py  test_feedback.py  test_rules.py
tests/corpus/: bug_01_basic_flag.c  bug_02_counter.c  bug_03_hal_callback.c  bug_04_indirect_call.c  bug_05_struct_member.c  bug_06_compound_write.c  bug_07_malloc_in_isr.c  bug_08_hal_blocking_in_isr.c  bug_09_freertos_non_isr_api.c  safe_01_volatile.c  safe_02_critical_section.c  safe_03_readonly.c  safe_04_freertos_guard.c  safe_05_isr_only.c  safe_06_primask_guard.c  safe_07_port_critical.c  safe_08_cmsis_io.c  safe_09_malloc_outside_isr.c  safe_10_freertos_from_isr_variant.c  safe_11_freertos_dual_dispatch.c  safe_12_volatile_threshold.c  safe_13_guarded_threshold.c  safe_14_pointer_volatile.c
tests/corpus/static_scope/: fn_bug.c  fn_safe.c  fp_bug.c  fp_clean.c
